style: Fixed CSS that prevented proper collapse of navbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,7 @@ hr:before { /* Not really supposed to work, but does */
         box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
     }
 
-    .navbar-collapse .collapse {
+    .navbar-collapse.collapse {
         display: none!important;
     }
 
@@ -153,7 +153,7 @@ hr:before { /* Not really supposed to work, but does */
     }
 
     /* since 3.1.0 */
-    .navbar-collapse .collapse .in {
+    .navbar-collapse.collapse.in {
         display: block!important;
     }
 
@@ -163,7 +163,7 @@ hr:before { /* Not really supposed to work, but does */
 
 }
 
-.navbar-flexbox {
+/*.navbar-flexbox {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-around;
@@ -172,7 +172,7 @@ hr:before { /* Not really supposed to work, but does */
 .navbar-flexitem {
   margin: auto;
 }
-
+*/
 /***************************/
 /* Our Story Customization */
 /* Carousel Customizations */
